--- a/Maths_20200515.ipynb
+++ b/Maths_20200515.ipynb
@@ -2,6 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AppleGothic']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from pylab import rcParams\n",
+    "import matplotlib.pylab as plt\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.font_manager as fm\n",
+    "import missingno as msno\n",
+    "font_list = fm.findSystemFonts(fontpaths = None, fontext = 'ttf')\n",
+    "font_list[:]\n",
+    "\n",
+    "plt.rc('font', family='AppleGothic') # For Windows\n",
+    "print(plt.rcParams['font.family'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
